BOAC-4280, accessibility: fix low contrast on b-table headers

--- a/src/assets/styles/boac-global.css
+++ b/src/assets/styles/boac-global.css
@@ -340,7 +340,7 @@ select.form-control {
   width: 150px;
 }
 .sortable-table-header {
-  color: #999;
+  color: #666;
   font-size: 12px;
   font-weight: bold;
   text-transform: uppercase;
